--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
-    "react-bootstrap": "^2.8.0"
+    "react-bootstrap": "^2.8.0",
+    "react-bootstrap-icons": "^1.10.3"
   }
 }
